tdf#62717 FILESAVE : Names Master pages are not saved properly

Change-Id: If58a72fca0f9cbdeb6fc11cc36dbf13e22cdd99a
Reviewed-on: https://gerrit.libreoffice.org/28750
Reviewed-by: jan iversen <jani@documentfoundation.org>
Tested-by: jan iversen <jani@documentfoundation.org>